@@ -32,7 +32,7 @@ public class TravelResponseDto {
         // TravelCountry 엔티티 목록에서 country 이름만 추출
         List<String> countryNames = travelCountries.stream()
                 .map(travelCountry -> travelCountry.getCountry().name())
-                .collect(Collectors.toList());
+                .toList();
 
         return new TravelResponseDto(
                 travel.getId(),
